se agrega media query en archivo css y se finaliza Mockup version movil

--- a/assets/css/estilos.css
+++ b/assets/css/estilos.css
@@ -8,9 +8,14 @@
 #nav_font{
 	color: white;
 }
-
-
-
+h1 #font-size{
+    font-size: 5rem;
+}
+.fondo{
+	background-image: url(assets/img/img_de_prueba.jpg);
+	background-repeat: no-repeat;
+	background-size: 
+}
 .img_color{
    background-color: #60832F;
 }
@@ -26,23 +31,56 @@
 .main_color{
 	background-color: #BA84EB;
 }
-
-
-
-
-
-
-
-
-
-
 .footer_color{
 	background-color: #480751;
 }
 .footer_ico{
 	color: white;
-	font-size: 35px;
+	font-size: 2rem;
 }
 .footer_mr{
     margin-left: 35px;
 }
+@media only screen and (max-width: 600px) 
+{
+div .none{
+    display: none; 
+  }
+@media only screen and (min-width: 600px) 
+{
+    .col-s-1 {
+    	width: 8.33%;
+    }
+    .col-s-2 {
+    	width: 16.66%;
+    }
+    .col-s-3 {
+    	width: 25%;
+    }
+    .col-s-4 {
+    	width: 33.33%;
+    }
+    .col-s-5 {
+    	width: 41.66%;
+    }
+    .col-s-6 {
+    	width: 50%;
+    }
+    .col-s-7 {
+    	width: 58.33%;
+    }
+    .col-s-8 {
+    	width: 66.66%;
+    }
+    .col-s-9 {
+    	width: 75%;
+    }
+    .col-s-10 {
+    	width: 83.33%;
+    }
+    .col-s-11 {
+    	width: 91.66%;
+    }
+    .col-s-12 {
+    	width: 100%;
+    }
