se crea archivo .js en nuestro directorio

--- a/assets/css/estilos.css
+++ b/assets/css/estilos.css
@@ -1,48 +1,111 @@
+body {
+  margin:0;
+  padding: 0;
+  }
+
+nav {
+  position: fixed;
+  top: 0;
+  width: 100%;
+}
 .nav_color{
     background-color: #480751;
+
 }
 #nav_ico{
 	color: white;
-	font-size: 35px;
+	font-size: 22px;
 }
 #nav_font{
 	color: white;
+  font-family: gabriela;
+  background-color: #480751;
 }
+ .titulo{
+  color: #86AA00;
+  font-family: dancing script;
+  font-size: 67px;
+  text-shadow: #000C0C 2px 2px 3px;
+}
+.titulo_2{
+  color: #c9bb21;
+  font-family: dancing script;
+  font-size: 50px;
+  text-shadow: #000C0C 3px 3px 6px;
+  }
 h1 #font-size{
     font-size: 5rem;
 }
+
 .img_color{
    background-color: #BA84EB;
 }
+.img_border{
+  border-radius: 50%;
+
+}
 .parrafo_color{
    background-color: #BA84EB;
-}
-.sin-pad{
-	padding: 0px;
-}
-.sin-mar{
-	margin: 0px;
+   font-family: Vollkorn;
 }
 .main_color{
-	background-color: #7D2AAC;
+ background-color: #7D2AAC;
 }
 .main_font{
-	color: white;
+	color: #480751;
+  font-family: gabriela;
+  padding-top: 30%;
 }
 .main_ico{
-	color: white;
+	color: #480751;
 	font-size: 3rem;
-	line-height: 140px;
+	line-height: 1rem;
+}
+.main_padding{
+  margin-top: 400px;
+}
+#galeria{
+  padding: 20px;
+  padding-bottom: 0;
+  width: 940px;
+  margin: auto;
+}
+#imgmostrar{
+  border: 1px solid #f2f2f2;
+  border-radius: 25px;
+  width: 940px;
+  height: 300px;
+}
+#galeria_miniaturas{
+  display: table;
+  margin: 0px auto;
+}
+.miniatura{
+  width: 60px;
+  height: 60px;
+  border-radius: 10px;
+  float-left;
+  cursor: pointer;
+  padding: 5px;
+  margin: 10px 5px;
 }
 .footer_color{
 	background-color: #480751;
+  width: 100%;
+  padding: 1px;
 }
 .footer_ico{
-	color: white;
-	font-size: 2rem;
+    position: relative;
+    top: 5px;
+	font-size: 24px;
 }
 .footer_mr{
-    margin-left: 35px;
+    margin-left: 30px;
+}
+footer {
+    position: fixed;
+    bottom: 0;
+    width: 100%
 }
 @media only screen and (max-width: 600px) 
 {
