--- a/assets/css/estilos.css
+++ b/assets/css/estilos.css
@@ -64,25 +64,26 @@ h1 #font-size{
 .main_padding{
   margin-top: 400px;
 }
+
 #galeria{
   padding: 20px;
   padding-bottom: 0;
-  width: 940px;
+  width: 50rem;
   margin: auto;
 }
 #imgmostrar{
   border: 1px solid #f2f2f2;
   border-radius: 25px;
-  width: 940px;
-  height: 300px;
+  width: 50em;
+  height: 25em;
 }
 #galeria_miniaturas{
   display: table;
   margin: 0px auto;
 }
 .miniatura{
-  width: 60px;
-  height: 60px;
+  width: 5rem;
+  height: 2,5rem;
   border-radius: 10px;
   float-left;
   cursor: pointer;
@@ -120,3 +121,6 @@ div .none{
 i .none_btn{
     display: none;
 }
+
+
+
